@@ -1,3 +1,10 @@
+2014-10-30  Eli Zaretskii  <eliz@gnu.org>
+
+	* bidi.c (bidi_cache_reset_to): Invalidate bidi_cache_last_idx by
+	setting it to -1.
+	(bidi_find_bracket_pairs): Pass to bidi_cache_reset_to a relative
+	index, not an absolute one, as that's what the function expects.
+
 2014-10-30  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* xfaces.c (Finternal_set_lisp_face_attribute): Don't try to realize
